правка #1 для 5 дз